@@ -1125,14 +1125,14 @@ function str_in_array($needle, $haystack, $strict = false) {
 		return in_array($needle, $haystack, $strict);
 	}
 	elseif ($strict) {
-		foreach ($haystack as $id => $value) {
+		foreach ($haystack as $value) {
 			if ($needle === $value) {
 				return true;
 			}
 		}
 	}
 	else {
-		foreach ($haystack as $id => $value) {
+		foreach ($haystack as $value) {
 			if (strcmp($needle, $value) == 0) {
 				return true;
 			}
